feat: 完善流程与实体状态同步、表单配置及流程图显示
主要功能：
- 实现流程流转时实体状态自动同步
- 添加实体状态管理与流程状态映射
- 支持节点表单配置和默认表单回退
- 优化流程图高亮显示，修复箭头标记
- 修复条件表达式保存和默认流配置
- 修复流程发布时状态映射数据丢失问题

技术改进：
- 添加 EntityStatusUpdateListener 监听流程事件
- 使用 toRaw 解除 Vue3 Proxy 避免 includes 失效
- 修复 BPMN 连线样式不破坏 marker-end 箭头
- 优化数据库索引和事务处理